--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "la-maison-jungle",
+    "name": "reves-botaniques",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
